@@ -3,15 +3,18 @@ package br.com.redventures.ramengo.api.broth;
 import br.com.redventures.ramengo.api.validation.ValidationException;
 import io.micrometer.common.util.StringUtils;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class BrothDataStore {
 
+        /*************
+         * FIELDS
+         *********/
+
         public static final List<Broth> BROTH_LIST;
 
         static {
-                BROTH_LIST = Arrays.asList(
+                BROTH_LIST = List.of(
                         new Broth(
                                 "1",
                                 "https://tech.redventures.com.br/icons/salt/inactive.svg",
@@ -21,6 +24,10 @@ public class BrothDataStore {
                                 10)
                 );
         }
+
+        /*************
+         * METHODS
+         **********/
 
         public static String getNameById(String id){
 
